prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/syntax_errors/root_table_forbidden.nut
// EXPECT_ERROR: "Access to root table is forbidden"
#forbid-root-table
let x = ::some_global
